se agregan ejemplos de herencia y mixins

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,4 +29,51 @@ nav a {
   font-size: 30px;
 }
 
+/*Mixins*/
+/*media sm*/
+.container-sm {
+  height: 150px;
+  width: 200px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*media md*/
+.container-md {
+  height: 200px;
+  width: 250px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*media lg*/
+.container-lg {
+  height: 250px;
+  width: 300px;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*Herencia*/
+.button-save, .button-warning {
+  height: 50px;
+  width: 80px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.button-warning {
+  background-color: yellow;
+}
+
+.button-save {
+  background-color: green;
+}
+
 /*# sourceMappingURL=main.css.map */
